dungeon viewport testing

--- a/dungeon/src/components/Dungeon/Dungeon.css
+++ b/dungeon/src/components/Dungeon/Dungeon.css
@@ -1,3 +1,10 @@
-.viewRow {
+.dungeon-container {
+  width: 416;
+  height: "416px";
+  margin: auto;
+  background-color: red;
   display: flex;
+}
+
+.viewRow {
 }
